The implmentation that finding internal JDK API usage and deprecated API is too slowly when there a lot of jars. The reason is create a seperate process when checking each class. When integrate emt4j to CI environment, developer may need wait for a while to see the result. So we reimplement this function by ourself.

--- a/emt4j-common/src/main/resources/default/i18n/DEPRECATED_API.properties
+++ b/emt4j-common/src/main/resources/default/i18n/DEPRECATED_API.properties
@@ -16,4 +16,4 @@
 # SPDX-License-Identifier: Apache-2.0
 title=Use deprecated Java API
 description=The deprecated API may be removed in a later JDK release.
-solution=Replace with the JavaDoc of deprecated API.
+solution=Replace with deprecated API by reference to JavaDoc.
