--- a/emt4j-common/src/main/resources/default/i18n/DEPRECATED_API_zh.properties
+++ b/emt4j-common/src/main/resources/default/i18n/DEPRECATED_API_zh.properties
@@ -16,4 +16,4 @@
 # SPDX-License-Identifier: Apache-2.0
 title=\u4EE3\u7801\u4F7F\u7528\u4E86JDK\u4E2D\u6807\u8BB0\u4E3ADeprecated\u7684API
 description=Deprecated\u7684API\u540E\u7EED\u53EF\u80FD\u4F1A\u5220\u9664,\u5B58\u5728\u6F5C\u5728\u4E0D\u517C\u5BB9\u7684\u98CE\u9669
-solution=\u53C2\u8003\u6807\u8BB0\u4E3Adeprecated\u7684API javadoc\u7684\u8BF4\u660E\u66FF\u6362\u4E3A\u5EFA\u8BAE\u7684API
+solution=\u53C2\u8003\u6807\u8BB0\u4E3Adeprecated\u7684API javadoc\u7684\u8BF4\u660E\u66FF\u6362\u4E3A\u76F8\u5E94\u5EFA\u8BAE\u7684API
