--- a/emt4j-common/src/main/resources/default/i18n/JDK_INTERNAL.properties
+++ b/emt4j-common/src/main/resources/default/i18n/JDK_INTERNAL.properties
@@ -15,5 +15,5 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 title=JDK internal APIs
-description=JDK internal API should only be called by JDK. It means these API is unstable, they may be changed or removed in a future release.
-solution=@{suggestion}
+description=JDK internal API should only be called by JDK. It means these APIs is unstable, they may be changed or removed in a future release.
+solution=Use public Java API.
