--- a/emt4j-common/src/main/resources/default/i18n/JDK_INTERNAL_zh.properties
+++ b/emt4j-common/src/main/resources/default/i18n/JDK_INTERNAL_zh.properties
@@ -16,4 +16,4 @@
 # SPDX-License-Identifier: Apache-2.0
 title=\u4F7F\u7528JDK\u5185\u90E8API
 description=JDK\u5185\u90E8API\u5E94\u8BE5\u53EA\u88ABJDK\u5185\u90E8\u4F7F\u7528\uFF0C\u8FD9\u4E9BAPI\u662F\u4E0D\u7A33\u5B9A\u7684\uFF0C\u540E\u7EED\u53EF\u80FD\u4F1A\u5220\u9664\u548C\u4FEE\u6539
-solution=@{suggestion}
+solution=\u4F7F\u7528\u516C\u5F00\u7684Java API.
