Call external tools as services
Invoke extenal tools as SPI services. And modify the analysis output
report according to external tool results.

--- a/emt4j-common/src/main/resources/default/i18n/SYSTEM_CLASSLOADER_TO_URLCLASSLOADER.properties
+++ b/emt4j-common/src/main/resources/default/i18n/SYSTEM_CLASSLOADER_TO_URLCLASSLOADER.properties
@@ -15,6 +15,6 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 title=Throw exception when cast system classloader to URLClassLoader
-description=In JDK 8 , system classloader is a subclass of URLClassLoader, but this is not true in JDK 11. Actually it changes to an internal classloader in JDK 11.\
-  If cast system classloader to URLClassLoader will occur class cast exception.
-solution=Do not depend on the system classloader's type,it's JDK internal implementation.
+description=In JDK 8 , system classloader is a subclass of URLClassLoader, but this is not true in JDK 11. \
+  Casting system classloader to URLClassLoader will cause class cast exception.
+solution=Do not depend on the system classloader's type, it's JDK internal implementation.
