chore: improve AddExportsRule

--- a/emt4j-common/src/main/resources/default/i18n/MODULE_ADD_EXPORTS.properties
+++ b/emt4j-common/src/main/resources/default/i18n/MODULE_ADD_EXPORTS.properties
@@ -16,4 +16,4 @@
 # SPDX-License-Identifier: Apache-2.0
 title=Add export modules
 description=From Java 9, if your code depends on the module except for "java.base", you should add require statements in module-info.java  or --add-exports to the java option.
-solution=Add "--add-exports=@{sourceModule}/@{sourcePackage}=ALL-UNNAMED" to the java option
+solution=Add "@foreach{item : shouldExports} --add-exports=@{item}=ALL-UNNAMED @end{}" to the java option
