--- a/emt4j-common/src/main/resources/default/i18n/MODULE_ADD_EXPORTS_zh.properties
+++ b/emt4j-common/src/main/resources/default/i18n/MODULE_ADD_EXPORTS_zh.properties
@@ -16,4 +16,4 @@
 # SPDX-License-Identifier: Apache-2.0
 title=\u589E\u52A0\u6A21\u5757\u5BFC\u51FA\u9009\u9879
 description=\u4ECEJava 9\u5F00\u59CB,\u5982\u679C\u4F9D\u8D56JDK\u4E2D\u9664java.base\u4EE5\u5916\u7684\u6A21\u5757,\u9700\u8981\u5728 module-info.java\u4E2D\u589E\u52A0\u4F9D\u8D56\u6216\u8005\u589E\u52A0--add-exports\u5230java\u9009\u9879\u4E2D.
-solution=\u589E\u52A0"--add-opens=@{sourceModule}/@{sourcePackage}=ALL-UNNAMED" \u5230java\u9009\u9879\u4E2D
+solution=\u589E\u52A0"@foreach{item : shouldExports} --add-exports=@{item}=ALL-UNNAMED @end{}" \u5230java\u9009\u9879\u4E2D
