chore: improve html output

--- a/emt4j-common/src/main/resources/default/i18n/common.properties
+++ b/emt4j-common/src/main/resources/default/i18n/common.properties
@@ -25,4 +25,5 @@ result.for.feature=Arch Independent Check Result
 content.title=Content
 detail.title=Detail
 back.to.content=Back to Content
+html.title=Migration Report
 
