--- a/emt4j-common/src/main/resources/default/i18n/common_zh.properties
+++ b/emt4j-common/src/main/resources/default/i18n/common_zh.properties
@@ -25,3 +25,4 @@ result.for.feature=\u5E73\u53F0\u65E0\u5173\u517C\u5BB9\u6027\u68C0\u67E5\u7ED3\
 content.title=\u76EE\u5F55
 detail.title=\u8BE6\u60C5
 back.to.content=\u56DE\u5230\u76EE\u5F55
+html.title=\u517C\u5BB9\u6027\u62A5\u544A
