feat: new HTML report template, fallback to old by -DuseOldTemplate

--- a/emt4j-common/src/main/resources/default/i18n/common.properties
+++ b/emt4j-common/src/main/resources/default/i18n/common.properties
@@ -26,4 +26,6 @@ content.title=Content
 detail.title=Detail
 back.to.content=Back to Content
 html.title=Migration Report
+issue.found=%d incompatible issue%s found
+issue.foundInTotal=%d incompatible issue%s found
 
