--- a/emt4j-common/src/main/resources/default/i18n/common_zh.properties
+++ b/emt4j-common/src/main/resources/default/i18n/common_zh.properties
@@ -26,3 +26,6 @@ content.title=\u76EE\u5F55
 detail.title=\u8BE6\u60C5
 back.to.content=\u56DE\u5230\u76EE\u5F55
 html.title=\u517C\u5BB9\u6027\u62A5\u544A
+issue.found=\u53D1\u73B0 %d \u4E2A\u517C\u5BB9\u6027\u95EE\u9898
+issue.foundInTotal=\u5171\u53D1\u73B0 %d \u4E2A\u517C\u5BB9\u6027\u95EE\u9898
+
