feat: sort by project modules and dependencies in html output

--- a/emt4j-common/src/main/resources/default/i18n/common.properties
+++ b/emt4j-common/src/main/resources/default/i18n/common.properties
@@ -28,4 +28,4 @@ back.to.content=Back to Content
 html.title=Migration Report
 issue.found=%d incompatible issue%s found
 issue.foundInTotal=%d incompatible issue%s found
-
+project.dependencies=Project Dependencies
