chore: use tag to display priority and count

--- a/emt4j-common/src/main/resources/default/i18n/common.properties
+++ b/emt4j-common/src/main/resources/default/i18n/common.properties
@@ -29,3 +29,5 @@ html.title=Migration Report
 issue.found=%d incompatible issue%s found
 issue.foundInTotal=%d incompatible issue%s found
 project.dependencies=Project Dependencies
+issue.priority=Priority
+issue.count=Issue Count
