--- a/emt4j-common/src/main/resources/default/i18n/common_zh.properties
+++ b/emt4j-common/src/main/resources/default/i18n/common_zh.properties
@@ -29,4 +29,5 @@ html.title=\u517C\u5BB9\u6027\u62A5\u544A
 issue.found=\u53D1\u73B0 %d \u4E2A\u517C\u5BB9\u6027\u95EE\u9898
 issue.foundInTotal=\u5171\u53D1\u73B0 %d \u4E2A\u517C\u5BB9\u6027\u95EE\u9898
 project.dependencies=\u9879\u76EE\u4F9D\u8D56
-
+issue.priority=\u4F18\u5148\u7EA7
+issue.count=\u95EE\u9898\u6570\u91CF
