chore: improve html report content

--- a/emt4j-common/src/main/resources/default/i18n/common.properties
+++ b/emt4j-common/src/main/resources/default/i18n/common.properties
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Contributors to the Eclipse Foundation
+# Copyright (c) 2022, 2023 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
@@ -29,5 +29,6 @@ html.title=Migration Report
 issue.found=%d incompatible issue%s found
 issue.foundInTotal=%d incompatible issue%s found
 project.dependencies=Project Dependencies
+project.dependencyCount=Dependency Count
 issue.priority=Priority
 issue.count=Issue Count
