feat: add recipe to fix Stream.count()

--- a/emt4j-common/src/main/resources/default/i18n/AUTOFIX.properties
+++ b/emt4j-common/src/main/resources/default/i18n/AUTOFIX.properties
@@ -25,3 +25,4 @@ autofix.java.lombokExperimental=Some annotation should be changed from lombok.ex
 autofix.java.removePluginOption=Plugin %s should remove %s dependency
 autofix.pom.removeCompilerPluginCompileArg=Remove %s compilerArgument of maven-compiler-plugin
 autofix.java.ternaryUnboxingGeneric=Convert code like `condition ? int : methodCall()` to `condition ? Integer.valueOf(int) : methodCall()` where methodCall() returns Integer type.
+autofix.java.streamCount=Convert Stream.count() to Stream.mapToLong(x->1).sum()
