--- a/emt4j-common/src/main/resources/default/i18n/AUTOFIX_zh.properties
+++ b/emt4j-common/src/main/resources/default/i18n/AUTOFIX_zh.properties
@@ -25,3 +25,4 @@ autofix.java.lombokExperimental=\u4e00\u4e9b\u6ce8\u89e3\u9700\u8981\u4ecelombok
 autofix.java.removePluginOption=\u63d2\u4ef6%s\u987b\u79fb\u9664%s\u4f9d\u8d56
 autofix.pom.removeCompilerPluginCompileArg=\u79fb\u9664\u4e86maven-compiler-plugin\u7684%s\u7f16\u8bd1\u9009\u9879
 autofix.java.ternaryUnboxingGeneric=\u628a\u5f62\u5982`condition ? int : methodCall()`\u7684\u4ee3\u7801\u8f6c\u6210`condition ? Integer.valueOf(int) : methodCall()`\uff0c\u5176\u4e2dmethodCall()\u7684\u8fd4\u56de\u503c\u7c7b\u578b\u4e3aInteger
+autofix.java.streamCount=\u628aStream.count()\u8f6c\u6362\u6210Stream.mapToLong(x->1).sum()
